@@ -211,6 +211,7 @@ public class SampleOptimizer extends MROpPlanVisitor {
         FileSpec fs = new FileSpec(predFs.getFileName(),new FuncSpec(loadFunc, rslargs));
         POLoad newLoad = new POLoad(load.getOperatorKey(),load.getRequestedParallelism(), fs);
         newLoad.setSignature(predLoad.getSignature());
+        newLoad.setLimit(predLoad.getLimit());
         try {
             mr.mapPlan.replace(load, newLoad);
             
