@@ -62,6 +62,8 @@ public class POLoad extends PhysicalOperator {
     // Alias for the POLoad
     private String signature;
     
+    private long limit=-1;
+    
     public POLoad(OperatorKey k) {
         this(k,-1, null);
     }
@@ -228,5 +230,13 @@ public class POLoad extends PhysicalOperator {
               return (Tuple) out;
         } else
           return (Tuple) out;
+    }
+
+    public long getLimit() {
+        return limit;
+    }
+
+    public void setLimit(long limit) {
+        this.limit = limit;
     }
 }
